--- a/src/components/form/social-btn/styles.scss
+++ b/src/components/form/social-btn/styles.scss
@@ -7,6 +7,8 @@
     height: 50px;
     border-radius: 5px;
     border: unset;
+    font-weight: 400;
+    font-size : 14px;
     .buttonIcon {
         display :flex;
         flex-direction: row;
